# nataraz-studio-web-backend

./: README.md  pyproject.toml
nataraz/: db.sqlite3  manage.py
nataraz/api/v1/: urls.py
nataraz/api/v1/about/: admin.py  apps.py  models.py  serializers.py  views.py
nataraz/api/v1/about/migrations/: 0001_initial.py
nataraz/api/v1/blog/: admin.py  form.py  models.py  serializers.py  urls.py  views.py
nataraz/api/v1/blog/migrations/: 0001_initial.py  0002_remove_blog_paragraphs_paragraph_blog.py
nataraz/api/v1/general/: admin.py  models.py  views.py
nataraz/api/v1/general/migrations/: 0001_initial.py  0002_rename_media_type_media_media_text_alter_media_file.py
nataraz/api/v1/partners/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
nataraz/api/v1/partners/migrations/: 0001_initial.py
nataraz/api/v1/procces/: admin.py  apps.py  models.py  serializers.py  views.py
nataraz/api/v1/procces/migrations/: 0001_initial.py  0002_rename_desc_process_description.py
nataraz/api/v1/services/: admin.py  models.py  serializers.py  views.py
nataraz/api/v1/services/migrations/: 0001_initial.py
nataraz/api/v1/team/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
nataraz/api/v1/team/migrations/: 0001_initial.py  0002_delete_team.py
nataraz/api/v1/testimonials/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
nataraz/api/v1/testimonials/migrations/: 0001_initial.py
nataraz/api/v1/works/: admin.py  apps.py  models.py  serializers.py  views.py
nataraz/nataraz/: asgi.py  settings.py  urls.py  wsgi.py
(+4 files in other folders)
